@@ -48,6 +48,7 @@ namespace MySql.Data.MySqlClient
         private ProcedureCache procedureCache;
         private PerformanceMonitor perfMonitor;
         private MySqlPromotableTransaction currentTransaction;
+        internal MySqlTransaction activeLegacyTransaction;
 
 		/// <include file='docs/MySqlConnection.xml' path='docs/InfoMessage/*'/>
 		public event MySqlInfoMessageEventHandler	InfoMessage;
@@ -275,9 +276,12 @@ namespace MySql.Data.MySqlClient
 			if (State != ConnectionState.Open)
 				throw new InvalidOperationException(Resources.ConnectionNotOpen);
 
+            if (activeLegacyTransaction != null)
+                throw new NotSupportedException(Resources.NoNestedTransactions);
+
 			MySqlTransaction t = new MySqlTransaction(this, iso);
 
-			MySqlCommand cmd = new MySqlCommand( "", this);
+			MySqlCommand cmd = new MySqlCommand("", this);
 
 			cmd.CommandText = "SET SESSION TRANSACTION ISOLATION LEVEL ";
 			switch (iso) 
@@ -299,6 +303,7 @@ namespace MySql.Data.MySqlClient
 			cmd.CommandText = "BEGIN";
 			cmd.ExecuteNonQuery();
 
+            activeLegacyTransaction = t;
 			return t;
 		}
 
